--- a/Evgenia_Koshits/package.json
+++ b/Evgenia_Koshits/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "npm": "^6.3.0",
     "react": "^16.4.2"
   },
   "devDependencies": {
