--- a/Kasianova Olesia/package.json
+++ b/Kasianova Olesia/package.json
@@ -1,28 +1,35 @@
 {
-  "name": "react-03.08",
+  "name": "exercise-3",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "GeekBrains. ReactJS",
+  "main": "",
   "scripts": {
-    "build": "webpack --mode production",
-    "dev": "webpack --mode development",
+    "server": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "react": "^16.4.2"
+  "repository": {
+    "type": "git",
+    "url": "https://https://github.com/olesia-kas/geekbrains-react-03.08.git"
   },
+  "keywords": [
+    "Install",
+    "WebPack",
+    "ReactJS",
+    "Babel"
+  ],
+  "author": "Kasianova Olesia",
+  "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "css-loader": "^1.0.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^0.22.0",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0"
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "path": "^0.12.7",
+    "webpack": "^3.4.1",
+    "webpack-dev-server": "^2.6.1"
+  },
+  "dependencies": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   }
 }
