--- a/Evgenia_Koshits/.gitignore
+++ b/Evgenia_Koshits/.gitignore
@@ -1,5 +1,3 @@
-.idea
-
 # Logs
 logs
 *.log
@@ -62,4 +60,7 @@ typings/
 # next.js build output
 .next
 
+# webpack build output - dist directory
+dist
 
+.DS_Storegit
