--- a/Nikita_Sysoev/package.json
+++ b/Nikita_Sysoev/package.json
@@ -13,7 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "classnames": "^2.2.6",
+    "prop-types": "^15.6.2",
     "react": "^16.4.2",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.2",
     "reactstrap": "^6.3.1"
   },
