--- a/Mishina_Maria/package.json
+++ b/Mishina_Maria/package.json
@@ -12,8 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "classnames": "^2.2.6",
+    "prop-types": "^15.6.2",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "reactstrap": "^6.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
