--- a/Nikolay_But/package.json
+++ b/Nikolay_But/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.1.1",
     "classnames": "^2.2.6",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
