--- a/Gregory_Kovorotny/package.json
+++ b/Gregory_Kovorotny/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
