--- a/Ampleev_Vadim/package.json
+++ b/Ampleev_Vadim/package.json
@@ -29,6 +29,7 @@
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.22.0",
     "webpack": "^4.16.5",
