--- a/MadanS/package.json
+++ b/MadanS/package.json
@@ -6,16 +6,19 @@
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack-dev-server  --mode development",
+    "devtool:component": "node cli/component.js --name ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "reactstrap": "^6.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -25,7 +28,11 @@
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "fs": "0.0.1-security",
     "html-webpack-plugin": "^3.2.0",
+    "minimist": "^1.2.0",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.22.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
