--- a/Gregory_Kovorotny/package.json
+++ b/Gregory_Kovorotny/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
+    "react-cookie": "^1.0.5",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "reactstrap": "^6.3.1"
