--- a/Nikolay_But/package.json
+++ b/Nikolay_But/package.json
@@ -19,7 +19,10 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
-    "reactstrap": "^6.4.0"
+    "reactstrap": "^6.4.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-actions": "^2.6.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
