--- a/Gregory_Kovorotny/package.json
+++ b/Gregory_Kovorotny/package.json
@@ -22,8 +22,11 @@
     "react": "^16.4.2",
     "react-cookie": "^1.0.5",
     "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "reactstrap": "^6.3.1"
+    "reactstrap": "^6.3.1",
+    "redux": "^4.0.0",
+    "redux-actions": "^2.6.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
