--- a/Mishina_Maria/package.json
+++ b/Mishina_Maria/package.json
@@ -18,6 +18,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-router-dom": "^4.3.1",
     "reactstrap": "^6.3.1"
   },
   "devDependencies": {
