--- a/Suchkov_Daniil/package.json
+++ b/Suchkov_Daniil/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "webpack --mode development",
     "dev1": "webpack-dev-server --mode development",
+    "devfile": "node cli/component.js --name",
     "build": "webpack --mode prodaction",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -29,6 +30,9 @@
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
+    "minimist": "^1.2.0",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.22.1",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
